All_Component_DX/force-app/main/default/objects/Proforma_Invoice_Line__c/fields/Applied_Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>Applied_Rate_Type__c</fullName>
    <description>Labor Rate type applied to this line</description>
    <inlineHelpText>Labor Rate type applied to this line</inlineHelpText>
    <label>Applied Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Flat Rate</fullName>
            </value>
            <value>
                <fullName>Per Hour</fullName>
            </value>
            <value>
                <fullName>Markup %</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>