All_Component_DX/force-app/main/default/objects/Proforma_Invoice_Line__c/fields/Billable_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Billable_Quantity__c</fullName>
    <description>Billable Qty computed for this line item. UOM is hours for Labor and Travel if applicable.</description>
    <inlineHelpText>Billable Qty computed for this line item. UOM is hours for Labor and Travel if applicable.</inlineHelpText>
    <label>Billable Qty</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>