All_Component_DX/force-app/main/default/objects/Proforma_Invoice_Line__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Case for which this invoice is generated. This is a lookup to an existing salesforce case record.</description>
    <inlineHelpText>Case for which this invoice is generated. This is a lookup to an existing salesforce case record.</inlineHelpText>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Proforma Invoice Lines</relationshipLabel>
    <relationshipName>Proforma_Invoice_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>