All_Component_DX/force-app/main/default/objects/Proforma_Invoice_Line__c/fields/Covered_Locations__c.field-meta.xml
<CustomField>
    <fullName>Covered_Locations__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Location covered under the contract being billed. This is applicable to invoices generated for Service Contracts only &amp; is a lookup to a Covered Location record.</description>
    <inlineHelpText>Location covered under the contract being billed. This is applicable to invoices generated for Service Contracts only &amp; is a lookup to a Covered Location record.</inlineHelpText>
    <label>Covered Locations</label>
    <referenceTo>Service_Contract_Sites__c</referenceTo>
    <relationshipLabel>Proforma Invoice Lines</relationshipLabel>
    <relationshipName>Proforma_Invoice_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>