All_Component_DX/force-app/main/default/objects/Proforma_Invoice_Line__c/fields/Covered_Products__c.field-meta.xml
<CustomField>
    <fullName>Covered_Products__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product covered under the contract being billed. This is applicable to invoices generated for Service Contracts only &amp; is a lookup to a Covered Product record.</description>
    <inlineHelpText>Product covered under the contract being billed. This is applicable to invoices generated for Service Contracts only &amp; is a lookup to a Covered Product record.</inlineHelpText>
    <label>Covered Products</label>
    <referenceTo>Service_Contract_Products__c</referenceTo>
    <relationshipLabel>Proforma Invoice Lines</relationshipLabel>
    <relationshipName>Proforma_Invoice_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>