All_Component_DX/force-app/main/default/objects/Proforma_Invoice_Line__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <description>Percentage of discount applied to this line item.</description>
    <inlineHelpText>Percentage of discount applied to this line item.</inlineHelpText>
    <label>Discount %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>