All_Component_DX/force-app/main/default/objects/Proforma_Invoice_Line__c/fields/Included_Services__c.field-meta.xml
<CustomField>
    <fullName>Included_Services__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Services covered under the contract being billed. This is applicable to invoices generated for Service Contracts only &amp; is a lookup to a Included Service record.</description>
    <inlineHelpText>Services covered under the contract being billed. This is applicable to invoices generated for Service Contracts only &amp; is a lookup to a Included Service record.</inlineHelpText>
    <label>Included Services</label>
    <referenceTo>Service_Contract_Services__c</referenceTo>
    <relationshipLabel>Proforma Invoice Lines</relationshipLabel>
    <relationshipName>Proforma_Invoice_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>