All_Component_DX/force-app/main/default/objects/Proforma_Invoice_Line__c/fields/Is_Billable__c.field-meta.xml
<CustomField>
    <fullName>Is_Billable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Billable indicator. This will be false if this line item is not being billed to customer.</description>
    <inlineHelpText>Billable indicator. This will be false if this line item is not being billed to customer.</inlineHelpText>
    <label>Is Billable</label>
    <type>Checkbox</type>
</CustomField>