All_Component_DX/force-app/main/default/objects/Proforma_Invoice_Line__c/fields/Line_Notes__c.field-meta.xml
<CustomField>
    <fullName>Line_Notes__c</fullName>
    <description>Information about the pricing rules applied to this line. This is updated by the Billing Engine.</description>
    <inlineHelpText>Information about the pricing rules applied to this line. This is updated by the Billing Engine.</inlineHelpText>
    <label>Line Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>