All_Component_DX/force-app/main/default/objects/Proforma_Invoice_Line__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <description>Price per unit of Part, Labor, Travel or Expense.</description>
    <inlineHelpText>Price per unit of Part, Labor, Travel or Expense.</inlineHelpText>
    <label>Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>