All_Component_DX/force-app/main/default/objects/Proforma_Invoice_Line__c/fields/Proforma_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Proforma_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Document under which this invoice is consolidated. This is a lookup to an existing Proforma Invoice record.</description>
    <inlineHelpText>Document under which this invoice is consolidated. This is a lookup to an existing Proforma Invoice record.</inlineHelpText>
    <label>Proforma Invoice</label>
    <referenceTo>Proforma_Invoice__c</referenceTo>
    <relationshipLabel>Proforma Invoice Lines</relationshipLabel>
    <relationshipName>Proforma_Invoice_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>