All_Component_DX/force-app/main/default/objects/Proforma_Invoice_Line__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>Actual quantity of Parts, Labor, Travel or Expense incurred for this line. UOM for Labor and Travel (if applicable) will be in hours.</description>
    <inlineHelpText>Actual quantity of Parts, Labor, Travel or Expense incurred for this line. UOM for Labor and Travel (if applicable) will be in hours.</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>