All_Component_DX/force-app/main/default/objects/Proforma_Invoice_Line__c/fields/Total_Line_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Line_Price__c</fullName>
    <description>Total price for this line before any contract adjustments/discounts are applied.</description>
    <inlineHelpText>Total price for this line before any contract adjustments/discounts are applied.</inlineHelpText>
    <label>Total Line Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>